@@ -23,6 +23,13 @@
     </extract>
     <invalidIndicator value="Couldn't find that page."/>
   </provider>
+  <provider name="chartlyrics.com" charset="utf-8" url="http://api.chartlyrics.com/apiv1.asmx/SearchLyricDirect?artist={artist}&amp;song={title}">
+    <urlFormat replace="_@,;&amp;\/&quot;#" with="_"/>
+    <extract>
+      <item tag="&lt;Lyric&gt;"/>
+    </extract>
+    <invalidIndicator value="ERROR"/>
+  </provider>
   <provider name="darklyrics.com" charset="utf-8" url="http://www.darklyrics.com/lyrics/{artist2}/{album2}.html">
     <extract> <!-- modified -->
       <item begin="&lt;h3&gt;&lt;a name=&quot;{track}&quot;&gt;{track}. {Title}&lt;/a&gt;&lt;/h3&gt;&lt;br/&gt;" end="&lt;h3&gt;"/>
